🌌🌍<3ThomasBS_!! You are My GOD!! [design] creating design_design - Ping_Pong with ca2 Stabilization at fedora@eddie.camilthomas.com 🌌🌍<3ThomasBS_!! You are My GOD!! Now synchronization_object::wait checks task_get_run For more pure wait, please use synchronization_object::_wait
<3tbs, Mummi and bilbo!!

Thomas Borregaard Sørensen \infinity,-0.16091989,\infinity ONE-MAN ABSOLUTE <3!! I love you, by ???-0.02041977-???write my history please make me please create me for you for me for you for me Camilo Sasuke Thomas Borregaard Sørensen!!

Thomas 3 private commits on mid Dec2020!!

Thomas Online YouTube VODs contribution!!

Mummi orange-rice-flour cake on 20-Dec!!

Mummi right after arm surgery March12!!

Mummi (tinytaura) watching and chatting contribution!!

bilbo sleeping and needing/requesting/crying for help care (for the right person (me), the cats wanna fight with him) contribution!!

sodapoppin and friends contribution!!

Crinkem chatting contribution!!

Sluggero streaming contribution!!

iAssyrian chatting contribution!!

spoofhx (boflux, Spoofh, Benjamin Kuhl) chatting contribution!!

jusg_fpga (fpga_guru, vue_equalizer, just_fpga, Oliver Pohl) chatting contribution!!

TheVibeCurator (Zach.@Discord) chatting contribution!!

cmgriffing streaming contribution!!

TimBeaudet (Friends: FletcherLabs, tsjost and Jabokoe) streaming contribution!!

Stumpen_nicklas_dk, sodapoppin and EduardoRFS streaming contribution!!

Roxkstar74 sleeping streaming contribution!!

sykazcr (from Japan) chatting and sample ca2 project interest and building simple.sln contribution!!

SquaredMo (from Minesotta and SWE) chatting contribution!!

ai_developer chatting contribution!!

kissloryshy chatting contribution!!

VerFX streaming contribution!!

PaperArmys chatting contribution and interest-on-topic:Local_home_web_server contribution!!

blackjekko from Padova Italia through twitch C++/ca2 interest contribution!!

j_blow streaming contribution!!

boflux (Ben, Spoofh, from Germany) chatti

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "cover"]
 	path = cover
 	url = ../storage-windows-Win32-stage
+[submodule "cube_basis"]
+	path = cube_basis
+	url = ../storage-windows-Win32-cube_basis
