🌌🌍<3ThomasBS_!! You are My GOD!! 🌌🌍 [ Windows Desktop : day 4 ] [ C++ ] ca2 Stabilization 🌌🌍 [ Ubuntu 22.04 : day 15 ] [ Linux ] 🌌🌍<3ThomasBS_!! You are My GOD!!
<3tbs, Mummi and bilbo!!

Thomas Borregaard Sørensen \infinity,-0.16091989,\infinity ONE-MAN ABSOLUTE <3!! I love you, by ???-0.02041977-???write my history please make me please create me for you for me for you for me Camilo Sasuke Thomas Borregaard Sørensen!!

Thomas 3 private commits on mid Dec2020!!

Thomas Online YouTube VODs contribution!!

Mummi orange-rice-flour cake on 20-Dec!!

Mummi right after arm surgery March12!!

Mummi (tinytaura) watching and chatting contribution!!

bilbo sleeping and needing/requesting/crying for help care (for the right person (me), the cats wanna fight with him) contribution!!

sodapoppin and friends contribution!!

Crinkem chatting contribution!!

Sluggero streaming contribution!!

iAssyrian chatting contribution!!

spoofhx (boflux, Spoofh, Benjamin Kuhl) chatting contribution!!

jusg_fpga (fpga_guru, vue_equalizer, just_fpga, Oliver Pohl) chatting contribution!!

TheVibeCurator (Zach.@Discord) chatting contribution!!

cmgriffing streaming contribution!!

TimBeaudet (Friends: FletcherLabs, tsjost and Jabokoe) streaming contribution!!

Stumpen_nicklas_dk, sodapoppin and EduardoRFS streaming contribution!!

Roxkstar74 sleeping streaming contribution!!

sykazcr (from Japan) chatting and sample ca2 project interest and building simple.sln contribution!!

SquaredMo (from Minesotta and SWE) chatting contribution!!

ai_developer chatting contribution!!

al_bundy111 and smokesses chatting contribution!!

kissloryshy chatting contribution!!

VerFX streaming contribution!!

PaperArmys chatting contribution and interest-on-topic:Local_home_web_server contribution!!

blackjekko from Padova Italia through twitch C++/ca2 interest contribution!!

j_blow streaming contribution!!

lowluds streaming, chatting and music production contribution!!

neverending_suffering (@twitch) chatting a

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
-[submodule "basis"]
-	path = basis
-	url = ../storage-windows-Win32-basis
-[submodule "stage"]
-	path = stage
-	url = ../storage-windows-Win32-stage
-[submodule "cube_basis"]
-	path = cube_basis
-	url = ../storage-windows-Win32-cube_basis
-[submodule "cube_stage"]
-	path = cube_stage
-	url = ../storage-windows-Win32-cube_stage
+[submodule "debug"]
+	path = debug
+	url = ../storage-windows-Win32-debug
+[submodule "release"]
+	path = release
+	url = ../storage-windows-Win32-release
+[submodule "static_debug"]
+	path = static_debug
+	url = ../storage-windows-Win32-static_debug
+[submodule "static_release"]
+	path = static_release
+	url = ../storage-windows-Win32-static_release
